--- a/visvikfrontend/src/App.css
+++ b/visvikfrontend/src/App.css
@@ -15,13 +15,12 @@
   background: linear-gradient(135deg, #fdeedc,#ffff, #e2efff);
 }
 .btn:hover {
-  background-color: #1d4ed8;          /* Tailwind: hover:bg-blue-700 */
+  background-color: #1d4ed8;          
 }
 
 body {
   font-family: "Source Sans Pro", sans-serif;
 }
-/* styles.css */
 
 .card-hover {
   transition: transform 0.3s ease;
@@ -30,7 +29,7 @@ body {
 }
 
 .card-hover:hover {
-  /* transform: scale(1.5); */
+
   border-right: 3px solid #3b82f6; 
   border-bottom: 3px solid #3b82f6;
   background: linear-gradient(135deg, #fdeedc,#ffff, #e2efff);
